# plant-rl

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  check_imports.py  compose.yml  config.json  debug.txt  docker-compose.alien.yml  docker-compose.aurora.yml  docker-compose.deploy.yml  docker-compose.devcontainer.yml  docker-compose.gpu.yml  docker-compose.oliver-local.yml  docker-compose.oliver.yml  docker-compose.sam.yml  docker-compose.stang5.yml  docker-compose.yml  fix_pyright_type_ignore.py  migrate_data.py  note.md  plant-rl-oliver.code-workspace  plantRL.def  pyproject.toml  rename.py  run.sh  todos
.devcontainer/: devcontainer.json
.devcontainer/alien/: devcontainer.json
.devcontainer/aurora/: devcontainer.json
.devcontainer/oliver/: devcontainer.json
.devcontainer/oliver_local/: devcontainer.json
.devcontainer/sam/: devcontainer.json
.devcontainer/stang5/: devcontainer.json
.github/instructions/: incubation.instructions.md  repeat_experiment.instructions.md
.github/workflows/: docker-publish.yml  python-test-api.yml  python-test-camera-api.yml  python-test-camera2-api.yml  python-test-lightbar-api.yml  python-test-status-api.yml  python-test.yml
analysis/: analyze_Exp3_data.ipynb  analyze_exp1_data.ipynb  analyze_exp_data.ipynb  analyze_historic_plant_data.ipynb  analyze_new_plant_data.ipynb  analyze_plant_data.ipynb  analyze_reward_timeseries.py  analyze_spectra.ipynb  check_timestep.py  clean_data.ipynb  compare_recipes.ipynb  data_analysis_for_sim.ipynb  open_checkpoint.ipynb  process_csv.py  process_csv_full-mean.py  process_csv_morning-all.py  reward_analysis.ipynb  temp.ipynb  test_CleanPlantSim.ipynb  test_MultiPlantSim.ipynb  test_plant_simulator.ipynb  test_plant_simulator.py  visualize_tc.ipynb
analysis/GP/: GP_model_old.py  analyze_GP_model.ipynb  build_GP_model.ipynb  build_GP_model_1day.ipynb  every_size_1day.npy  examine_data_10min.ipynb  mean_size_1day.npy  prep_data.ipynb  prep_data_10min.ipynb  prep_data_1day.ipynb  test_GP_model.ipynb
analysis/plant_data/: first_exp_area_over_time.csv  new_area_over_time.csv  plant_area_data.csv
api/: README.md  addresses.json  app.py  install-buster.sh  install-docker-bookworm.sh  install-docker-buster.sh  install-docker-stretch.sh  install-stretch.sh  lightbar.py  lightbar_calibration.json  requirements.txt
api/camera/: Dockerfile  README.md  compose.yml  docker-compose.yml  requirements.txt
api/camera2/: Dockerfile  README.md  compose.yml  docker-compose.yml  requirements-test.txt  requirements.txt
api/grounding_dino/: Dockerfile  README.md  compose.yml  requirements.txt
api/lightbar/: Dockerfile  README.md  compose.yml  requirements.txt
api/live/: Dockerfile  README.md  compose.yml  requirements.txt
api/segment_anything/: Dockerfile  README.md  requirements.txt
api/status/: compose.yml  (+1 more)
clusters/: compute.json  compute_gpu.json  vulcan-cpu.json  vulcan.json
copy/: mosaic.py
lightbar_monitor/: Dockerfile  README.md  light_monitor.py  requirements.txt
scripts/: ESARSA.sh  GAC.sh  Linear.sh  all_cameras.sh  all_cameras_off.sh  all_install_camera2.sh  all_lightbars_off.sh  all_lightbars_on.sh  cool_white_calibration.py  get_lsb_releases.sh  get_observations.sh  glob_copy.py  install_cameras.sh  install_lightbars.sh  local.py  local_sim.py  local_sim_async.py  make_collage.py  make_timelapse.py  make_timelapse.sh  offline-E0-P1.sh  offline-E0-P2.sh  offline-E0-P3.sh  offline-E0.sh  offline.sh  offline_A0.sh  offline_A1.sh  offline_A2.sh  offline_E1.sh  offline_E2.sh  offline_E3.sh  offline_E4.sh  offline_E5.sh  offline_E6.sh  offline_S1.sh  offline_S2.sh  offline_S5.sh  offline_S6.sh  offline_S7.sh  online_A0.sh  (+17 more)
src/: annotate_images.py  clean_data.py  debug_data.py  evaluate_vision_pipeline.py  main.py  main_offline.py  main_offline2.py  main_real.py  main_sim.py  main_sim_async.py  monitor.py  offline_E0.py  plot_clean_data.py  plot_data.py  process_old_data.py  stack_images.py  test_gradient_bandit.py  test_k_armed_bandit.py  test_wandb_alert.py  visualize_action_coverage.py  visualize_simplex_policy.py
tests/: conftest.py  test_main_real.py  test_plant_simulator.py
(+1455 files in other folders)
