[build-system]
requires = ['setuptools']

[project]
name = 'plant-data-collection'
version = '0.0.0'
description = ''
requires-python = '>=3.12'
readme = 'README.md'
license = {text = 'MIT'}
classifiers = [
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = [
    'pillow',
    'jax>=0.2.14',
    'numpy>=1.22.0',
    'PyExpUtils-andnp~=7.0',
    'RlGlue-andnp~=1.0',
    'requests>=2.32.3',
    'plantcv~=4.2.1',
    'altair<6',
    'pandas[excel]',
    'supervision',
    "wandb[media]",
    'aiohttp>=3.11.18',
    'aiohttp-retry',
    'jinja2',
    'matplotlib',
    'seaborn',
    'scipy<1.16',
    "pyarrow>=24.0.0",
]

[dependency-groups]
cpu = ['torch']
gpu = ['torch']
dev = [
    'pip',
    'ruff',
    'pyright',
    'pre-commit',
    'pytest',
    "pytest-asyncio>=1.0.0",
    'pytest-cov'
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", group = "cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool]
[tool.ruff.lint]
select = ['F', 'E', 'W', 'B']
ignore = ['E501', 'E701', 'B023']

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = '--import-mode=importlib'
pythonpath = ['src']
asyncio_mode = 'auto'

[tool.pyright]
include = ['experiments', 'src', 'tests']
venvPath = '.'
venv = '.venv'
typeCheckingMode = 'standard'
useLibraryCodeForTypes = true
